test portfolio en ligne avec photos plus light

--- a/Portfolio Epixdrone/index.html
+++ b/Portfolio Epixdrone/index.html
@@ -103,7 +103,7 @@
               data-scroll-speed="-2"
               data-scroll-direction="horizontal"
             >
-              Scénarios S1,S2, S3
+              Scénarios S1,S3
             </p>
           </div>
         </div>
