Modif Portfolio ajout photo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Photographie & vidéo
+              Télépilote professionnel &
             </h2>
           </div>
         </div>
@@ -48,7 +48,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="top"
             >
-              Aérienne
+              Chasseur d'Orage
             </h2>
           </div>
         </div>
@@ -66,16 +66,16 @@
           <h2>À propos</h2>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-          similique cumque non repellendus eligendi architecto. Consectetur
-          distinctio aperiam debitis itaque est minima nihil dolore quae
-          pariatur repellendus ad quod, aut dolorum eveniet perferendis.
-          Doloribus quos laboriosam quas vero temporibus fugit velit voluptate
-          earum praesentium rerum, iste dolore, itaque laudantium aut suscipit
-          soluta delectus quibusdam aliquid repellendus sed. Consequatur sit in
-          voluptas, accusamus aliquam amet ad nemo optio aspernatur! Debitis
-          perspiciatis impedit sit voluptates assumenda velit vero non ducimus
-          dolores aliquid.
+          Télépilote de drone depuis 2018, Passionné par la nature, la musique
+          et les nouvelles technologies depuis mon plus jeune âge, c’est en
+          autodidacte que j’ai acquis de multiples compétences dans divers
+          domaines. C’est au travers de ce portfolio que je vous invite à
+          découvrir mon univers et mes passions. <br /><br />
+          D’un esprit curieux et créatif, c’est en 2020 que j’ai découvert une
+          nouvelle passion pour la photographie d’orage après avoir capturé mes
+          1ers éclairs avec un boîtier Nikon D60. Marqué par la puissance de la
+          tempête de 99, c’est sans doute depuis ce jour-là que ma fascination
+          pour les orages à vraiment commencé.
         </p>
       </section>
 
@@ -160,10 +160,10 @@
         </h2>
         <div class="projects-container">
           <div data-scroll data-scroll-speed="1" class="project" id="p1">
-            <img src="./asset/img/Fog.jpg" alt="Fog" />
+            <img src="./asset/img/Drone-brume-2.jpg" alt="Sea Fog" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Brumes</a>
-              <p>2022</p>
+              <a href="*" target="_blank">Sea Fog</a>
+              <p>Mer de nuage sur le Pic Saint-Loup</p>
             </div>
           </div>
           <div data-scroll class="project" id="p2">
@@ -176,8 +176,32 @@
           <div data-scroll class="project" id="p3">
             <img src="./asset/img/Lake.jpg" alt="Lake" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Aerial View</a>
+              <a href="*" target="_blank">Aerial View</a>
               <p>2022</p>
+            </div>
+          </div>
+          <div data-scroll class="project" id="p2">
+            <img
+              src="./asset/img/Double-Extranuageux.jpg"
+              alt="Double impact"
+            />
+            <div class="project-infos">
+              <a href="*" target="_blank">Double Impact </a>
+              <p>30/08/2022</p>
+            </div>
+          </div>
+          <div data-scroll class="project" id="p3">
+            <img src="./asset/img/Orage-01.jpg" alt="Orage-01" />
+            <div class="project-infos">
+              <a href="*" target="_blank">Orage dans le Gard(30) </a>
+              <p>06/09/2022</p>
+            </div>
+          </div>
+          <div data-scroll class="project" id="p4">
+            <img src="./asset/img/Arcus.jpg" alt="Arcus" />
+            <div class="project-infos">
+              <a href="*" target="_blank">Arcus </a>
+              <p>28/06/2022</p>
             </div>
           </div>
         </div>
@@ -190,7 +214,7 @@
       <footer>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>Vous avez un project ?</p>
+            <p>Vous avez un projet ?</p>
           </div>
         </div>
         <div class="wrapper">
