Modif Portfolio ajout shortcut icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Epixdrone</title>
 
+    <link rel="shortcut icon" href="./asset/img/DRONE LOGO 3 150px.png" />
     <link rel="stylesheet" href="./asset/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./style.css" />
     <style>
