correction et prepa responsive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           nouvelle passion pour la photographie d’orage après avoir capturé mes
           1ers éclairs avec un boîtier Nikon D60. Marqué par la puissance de la
           tempête de 99, c’est sans doute depuis ce jour-là que ma fascination
-          pour les orages à vraiment commencé.
+          pour les orages a vraiment commencé...
         </p>
       </section>
 
