modif width img 95%

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div data-scroll class="project" id="p2">
             <img src="./asset/img/River.jpg" alt="River" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Nature</a>
+              <a href="https://www." target="_blank">Nature</a>
               <p>2022</p>
             </div>
           </div>
